--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
