--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
+    </header>
+    <main class="centered-main-page-element">
       <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
         <div class="task-row-wrapper"><input id="new-task" class="task" type="text"><button>Add</button></div>
       </p>
@@ -39,7 +39,7 @@
             <button class="delete"><img src="./remove.svg" alt="remove"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
